tests/semantic_analysis/error/wrong_defined.c
wrong_defined\.c:5:5: error:.*